// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering home screen 1`] = `
<div
  className="p-a300 p-a800--xl br br-t400 br--y css-e5tq8c"
  style={Object {}}
>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      311: Boston City Services
    </h2>
  </div>
  <div
    className="g m-v500"
  >
    <div
      className="g--8"
    >
      <h3
        className="stp m-v300"
      >
        <span
          className="stp-number"
        >
          1
        </span>
        Describe your problem
      </h3>
      <textarea
        className={
          Object {
            "data-css-1red1ju": "",
          }
        }
        defaultValue="Thanos is attacking."
        name="description"
        onBlur={[Function]}
        onInput={[Function]}
        placeholder="Example: my street hasn’t been plowed"
      />
    </div>
    <div
      className="g--4 css-17cwx2g"
    >
      <h3
        className="stp m-v300"
      >
        <span
          className="stp-number"
        >
          2
        </span>
        How can we help?
      </h3>
      <div
        style={
          Object {
            "height": 222,
            "overflowY": "auto",
          }
        }
      >
        <ul
          className="ul"
        >
          <li>
            <a
              className="t--sans tt-u"
              href="/report/CSMCINC"
              onClick={[Function]}
            >
              Cosmic Incursion
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <button
    className="btn css-13boa87"
    onClick={[Function]}
  >
    Next
  </button>
</div>
`;

exports[`rendering small screen service picker 1`] = `
<div
  className="p-a300 p-a800--xl br br-t400 br--y css-e5tq8c"
  style={Object {}}
>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      311: Boston City Services
    </h2>
  </div>
  <div
    className="m-v500"
  >
    <h3
      className="stp m-v300"
    >
      <span
        className="stp-number"
      >
        2
      </span>
      How can we help?
    </h3>
    <div
      style={
        Object {
          "height": 222,
          "overflowY": "auto",
        }
      }
    >
      <ul
        className="ul"
      >
        <li>
          <a
            className="t--sans tt-u"
            href="/report/CSMCINC"
            onClick={[Function]}
          >
            Cosmic Incursion
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
